other/b-d/dns-policy-and-dns-config/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: change-dns-config-policy
status:
  ready: true
