other/b-d/dns-policy-and-dns-config/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: dns-policy-and-dns-config
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../dns-policy-and-dns-config.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
    - script:
        content: if kubectl create -f kubeadm-config.yaml; then exit 0; else exit
          0; fi
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - apply:
        file: podcontrollers.yaml
  - name: step-03
    try:
    - assert:
        file: pods-patched.yaml
    - assert:
        file: podcontrollers-patched.yaml
    - error:
        file: pods-not-patched.yaml
